--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body{
+    font-family: 'Arvo', serif;
+}
 .container{
-    color:#daf7dc ;
+    color:#f7dba7 ;
+    border-color:#041f1e ;
+    border-width: 4px;
+    border-style: inset;
+    padding: 4px;
+
+}
+.page-header{
+    text-align:center;
+    border-style: inset;
+    border-width: 4px;
+    border-color:#041f1e;
 }
